# pytranscribe

./: pyproject.toml
pytranscribe/: pytranscribe.py
